--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@
         }
         
         /* Responsive Design */
-        @media (max-width: 600px) {
+        @media {
             h1 {
                 font-size: 2.2rem;
             }
@@ -575,7 +575,8 @@
             }
             
             .carousel-item {
-                height: 1000px;
+                height: 800px;
+                width: 100%;
             }
             
             .next-btn {
@@ -583,21 +584,3 @@
                 font-size: 1rem;
             }
         }
-        
-        @media (max-width: 400px) {
-            h1 {
-                font-size: 1.8rem;
-            }
-            
-            p {
-                font-size: 1rem;
-            }
-            
-            .carousel-item {
-                height: 1000px;
-            }
-            
-            .cartoon {
-                display: none;
-
-            }
