--- a/styles.css
+++ b/styles.css
@@ -558,6 +558,8 @@
             
             .container {
                 padding: 15px;
+                   height: 600px;
+                   width: 100%;
             }
             
             .cartoon {
@@ -575,7 +577,7 @@
             }
             
             .carousel-item {
-                height: 800px;
+                height: 600px;
                 width: 100%;
             }
             
@@ -584,3 +586,4 @@
                 font-size: 1rem;
             }
         }
+
