--- a/styles.css
+++ b/styles.css
@@ -577,6 +577,7 @@
             }
             
             .carousel-item {
+                min-width: 100%;
                 height: 200px;
             }
             
@@ -585,6 +586,7 @@
                 font-size: 1rem;
             }
         }
+
 
 
 
