--- a/styles.css
+++ b/styles.css
@@ -579,12 +579,18 @@
             .carousel-item {
                 height: 200px;
             }
+            .carousel-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
             
             .next-btn {
                 padding: 10px 25px;
                 font-size: 1rem;
             }
         }
+
 
 
 
